--- a/src/style/auth.scss
+++ b/src/style/auth.scss
@@ -1,16 +1,16 @@
 .auth-page-wrapper {
     display: grid;
-    grid-template-columns: 1fr, 1fr;
+    grid-template-columns: 1fr 1fr;
     height: calc(100vh - 84px);
-
+  
     .left-column {
-        background-size: cover;
+      background-size: cover;
     }
-
+  
     .right-column {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #f6f6f6;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $offwhite;
     }
-}
+  }
