--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,12 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 @import "./base.scss";
+@import "./button.scss";
 @import "./navigation.scss";
+@import "./grid.scss";
 @import "./portfolio.scss";
+@import "./portfolio-manager.scss";
+@import "./portfolio-form.scss";
+@import "./portfolio-sidebar.scss";
 @import "./auth.scss";
+@import "./forms.scss"
