--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,10 +3,19 @@
 @import "./base.scss";
 @import "./button.scss";
 @import "./navigation.scss";
+@import "./layouts.scss";
 @import "./grid.scss";
 @import "./portfolio.scss";
+@import "./home.scss";
 @import "./portfolio-manager.scss";
 @import "./portfolio-form.scss";
 @import "./portfolio-sidebar.scss";
+@import "./portfolio-detail.scss";
 @import "./auth.scss";
-@import "./forms.scss"
+@import "./forms.scss";
+@import "./blog.scss";
+@import "./loaders.scss";
+@import "./blog-form.scss";
+@import "./modals.scss";
+@import "./react-draft-wysiwyg.scss";
+@import "./rich-text-editor.scss"
